--- a/build.gradle
+++ b/build.gradle
@@ -380,6 +380,7 @@ task nightlyRelease(type: ShadowJar) {
 
 javadoc {
 	title = 'Skript ' + project.property('version')
+	dependsOn githubRelease
 	source = sourceSets.main.allJava
 
 	exclude("ch/njol/skript/conditions/**")
