--- a/.github/workflows/cleanup-docs.yml
+++ b/.github/workflows/cleanup-docs.yml
@@ -1,5 +1,7 @@
 name: Cleanup nightly documentation
+
 on: delete
+
 jobs:
   cleanup-nightly-docs:
     if: github.event.ref_type == 'branch'
@@ -15,7 +17,7 @@ jobs:
           echo "DOCS_OUTPUT_DIR=${GITHUB_WORKSPACE}/skript-docs/docs/nightly/${BRANCH_NAME}" >> $GITHUB_OUTPUT
           echo "DOCS_REPO_DIR=${GITHUB_WORKSPACE}/skript-docs" >> $GITHUB_OUTPUT
       - name: Checkout Skript
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
             ref: ${{ github.event.repository.default_branch }}
             submodules: recursive
@@ -30,6 +32,7 @@ jobs:
           DOCS_OUTPUT_DIR: ${{ steps.configuration.outputs.DOCS_OUTPUT_DIR }}
         run: |
           rm -rf ${DOCS_OUTPUT_DIR} || true
+          echo "Deleted ${BRANCH_NAME} branch"
       - name: Push nightly documentation cleanup
         uses: ./skript/.github/workflows/docs/push-docs
         with:
